example/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fe-ingress
  annotations:
    minke.org/jwt-key: "keys-url"
spec:
  tls:
  - hosts:
    - test.example.com
    secretName: test-secret
  rules:
  - host: test.example.com
    http:
      paths:
      - path: /tea
        backend:
          serviceName: tea-svc
          servicePort: 80
      - path: /coffee
        backend:
          serviceName: coffee-svc
          servicePort: 80
